--- a/React WEB/Api_referencia/account/templates/account/password_reset.html
+++ b/React WEB/Api_referencia/account/templates/account/password_reset.html
@@ -18,7 +18,7 @@
 
 <p>{% trans "Your username, in case you've forgotten:" %} <b>{{ user.get_username }}</b></p>
 
-<p style="margin-bottom:100px"><a style="display: inline-block; padding: 10px 20px; background-color: red; color: white; text-decoration: none;" href="{{ protocol }}://{{ domain }}/{{ url|safe }}">Reset Password</a></p>
+<p style="margin-bottom:100px"><a style="display: inline-block; padding: 10px 20px; background-color: red; color: white; text-decoration: none;" href="http://localhost:3000/{{ url|safe }}">Reset Password</a></p>
 
 <span>Follow us: </span>
 <div style="display: flex; justify-content: center; align-items: center;">
