--- a/React WEB/src/components/SCSS/B_Entrar.module.scss
+++ b/React WEB/src/components/SCSS/B_Entrar.module.scss
@@ -1,5 +1,7 @@
 .btn_login {
     display: flex;
+    position: absolute;
+    right: 100px;
     width: 100px;
     height: 35px;
     justify-content: center;
