--- a/React WEB/src/components/SCSS/B_car_fat.module.css
+++ b/React WEB/src/components/SCSS/B_car_fat.module.css
@@ -7,6 +7,8 @@
 
 .Btn_refresh {
   display: flex;
+  position: absolute;
+  left: 100px;
   align-items: center;
   border: none;
   background-color: #2196F3;
@@ -19,4 +21,10 @@
   display: flex;
   width: 32px;
   height: 32px;
+}
+
+@media screen and (max-width: 430px) {
+  .carona_fat {
+    font-size: small;
+  }
 }/*# sourceMappingURL=B_car_fat.module.css.map */
