--- a/React WEB/src/App.css
+++ b/React WEB/src/App.css
@@ -8,5 +8,72 @@
 }
 
 body {
-    background-color: #fae8b8;
+    background-color: white;
+}
+
+/* Media query de adaptação */
+
+/* Celular */
+@media screen and (max-width: 430px) {
+
+    .rodape {
+        display: flex;
+        padding: 20px;
+    }
+
+    main {
+        width: 100%;
+        height: 100%;
+    }
+
+    .logo_uerj {
+        width: 340px;
+        height: auto;
+    }
+
+    .logo-text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    
+
+    .wrapper {
+        top: 20%;
+        width: 100%;
+    }
+}
+
+@media screen and (min-width: 430px) and (max-width: 668px) {
+    .rodape {
+        display: flex;
+        padding: 20px;
+    }
+
+    .logo_uerj {
+        width: 400px;
+        height: auto;
+    }
+
+    .logo-text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
+
+@media screen and (max-height: 500px) {
+    .logo-text {
+        top: 235px;
+    }
+
+    .wrapper {
+        position: absolute;
+        left: 25%;
+        transition: transform .5s ease, height .2s ease;
+        bottom: -240px;
+    }
 }
