--- a/React WEB/src/components/SCSS/B_Entrar.module.scss
+++ b/React WEB/src/components/SCSS/B_Entrar.module.scss
@@ -20,3 +20,10 @@
         background-color: #2196F3;
     }
 }
+
+@media screen and (max-width: 510px) {
+    .btn_login{
+        width: 80px;
+        right: 40px;
+    }
+}
