--- a/React WEB/src/components/SCSS/B_Entrar.module.css
+++ b/React WEB/src/components/SCSS/B_Entrar.module.css
@@ -19,4 +19,11 @@
 }
 .btn_login:hover {
   background-color: #2196F3;
+}
+
+@media screen and (max-width: 510px) {
+  .btn_login {
+    width: 80px;
+    right: 40px;
+  }
 }/*# sourceMappingURL=B_Entrar.module.css.map */
