--- a/React WEB/src/components/SCSS/Menu_princ.css
+++ b/React WEB/src/components/SCSS/Menu_princ.css
@@ -13,6 +13,8 @@ html *::after {
 }
 
 .menu {
+  opacity: 0;
+  visibility: hidden;
   margin: 0;
   width: 46em;
   display: flex;
@@ -23,6 +25,7 @@ html *::after {
   position: relative;
   align-items: center;
   padding: 0 1.9em 1em;
+  left: 300px;
   justify-content: center;
   background-color: #2196F3;
   border-radius: 1em 1em 4.5em 4.5em;
@@ -90,7 +93,7 @@ html *::after {
 }
 
 .menu__text {
-  left: 2.5em;
+  left: 0em;
   font-size: 25px;
   position: absolute;
   text-transform: capitalize;
@@ -172,5 +175,11 @@ html *::after {
   }
   100% {
     transform: translate3d(0, 0, 0);
+  }
+}
+@media screen and (max-width: 870px) {
+  .menu {
+    display: none;
+    opacity: 0;
   }
 }/*# sourceMappingURL=Menu_princ.css.map */
