--- a/React WEB/src/components/SCSS/Modal.module.scss
+++ b/React WEB/src/components/SCSS/Modal.module.scss
@@ -8,7 +8,7 @@ input:-webkit-autofill:focus {
 
 .container_wrapper {
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%,-50%);
     z-index: 20;
@@ -57,6 +57,9 @@ input:-webkit-autofill:focus {
         overflow: hidden;
         transition: transform .5s ease, height .2s ease;
         z-index: 2;
+        @media screen and (max-width: 870px) {
+                width: 350px;
+        }
     }
 
 .icon_close {
@@ -80,159 +83,23 @@ input:-webkit-autofill:focus {
     }
 }
 
-// spinner
+@media screen and (width < 430px) {
+    .container_wrapper {
+        top: 70%;
+        width: 90%;
+        left: 50%;
+    }
+    .wrapper {
+        width: 100%;
+    }
+}
 
-// /* :not(:required) hides these rules from IE9 and below */
-// .loading.register:not(:required) {
-//     /* hide "loading..." text */
-//     font: 0/0 a;
-//     color: transparent;
-//     text-shadow: none;
-//     background-color: transparent;
-//     border: 0;
+@media screen and (height < 500px) {
 
-//     &::after {
-//         content: '';
-//         display: block;
-//         font-size: 10px;
-//         width: 1em;
-//         height: 1em;
-//         margin-top: -0.5em;
-//         -webkit-animation: spinner 150ms infinite linear;
-//         -moz-animation: spinner 150ms infinite linear;
-//         -ms-animation: spinner 150ms infinite linear;
-//         -o-animation: spinner 150ms infinite linear;
-//         animation: spinner 150ms infinite linear;
-//         border-radius: 0.5em;
-//         -webkit-box-shadow: rgba(255, 255, 255, 0.75) 1.5em 0 0 0, rgba(255, 255, 255, 0.75) 1.1em 1.1em 0 0, rgba(255, 255, 255, 0.75) 0 1.5em 0 0, rgba(255, 255, 255, 0.75) -1.1em 1.1em 0 0, rgba(255, 255, 255, 0.75) -1.5em 0 0 0, rgba(255, 255, 255, 0.75) -1.1em -1.1em 0 0, rgba(255, 255, 255, 0.75) 0 -1.5em 0 0, rgba(255, 255, 255, 0.75) 1.1em -1.1em 0 0;
-//         box-shadow: rgba(255, 255, 255, 0.75) 1.5em 0 0 0, rgba(255, 255, 255, 0.75) 1.1em 1.1em 0 0, rgba(255, 255, 255, 0.75) 0 1.5em 0 0, rgba(255, 255, 255, 0.75) -1.1em 1.1em 0 0, rgba(255, 255, 255, 0.75) -1.5em 0 0 0, rgba(255, 255, 255, 0.75) -1.1em -1.1em 0 0, rgba(255, 255, 255, 0.75) 0 -1.5em 0 0, rgba(255, 255, 255, 0.75) 1.1em -1.1em 0 0;
-//     }
-// }
-
-// .loading.register {
-//     opacity: 1;
-//     overflow: hidden;
-//     position: fixed;
-//     z-index: 999;
-//     height: 2em;
-//     width: 2em;
-//     margin: auto;
-//     top: 365px;
-//     left: 0;
-//     bottom: 0;
-//     right: 0;
-// }
-
-// .loading.login:not(:required) {
-//     /* hide "loading..." text */
-//     font: 0/0 a;
-//     color: transparent;
-//     text-shadow: none;
-//     background-color: transparent;
-//     border: 0;
-
-//     &::after {
-//         content: '';
-//         display: block;
-//         font-size: 10px;
-//         width: 1em;
-//         height: 1em;
-//         margin-top: -0.5em;
-//         -webkit-animation: spinner 150ms infinite linear;
-//         -moz-animation: spinner 150ms infinite linear;
-//         -ms-animation: spinner 150ms infinite linear;
-//         -o-animation: spinner 150ms infinite linear;
-//         animation: spinner 150ms infinite linear;
-//         border-radius: 0.5em;
-//         -webkit-box-shadow: rgba(255, 255, 255, 0.75) 1.5em 0 0 0, rgba(255, 255, 255, 0.75) 1.1em 1.1em 0 0, rgba(255, 255, 255, 0.75) 0 1.5em 0 0, rgba(255, 255, 255, 0.75) -1.1em 1.1em 0 0, rgba(255, 255, 255, 0.75) -1.5em 0 0 0, rgba(255, 255, 255, 0.75) -1.1em -1.1em 0 0, rgba(255, 255, 255, 0.75) 0 -1.5em 0 0, rgba(255, 255, 255, 0.75) 1.1em -1.1em 0 0;
-//         box-shadow: rgba(255, 255, 255, 0.75) 1.5em 0 0 0, rgba(255, 255, 255, 0.75) 1.1em 1.1em 0 0, rgba(255, 255, 255, 0.75) 0 1.5em 0 0, rgba(255, 255, 255, 0.75) -1.1em 1.1em 0 0, rgba(255, 255, 255, 0.75) -1.5em 0 0 0, rgba(255, 255, 255, 0.75) -1.1em -1.1em 0 0, rgba(255, 255, 255, 0.75) 0 -1.5em 0 0, rgba(255, 255, 255, 0.75) 1.1em -1.1em 0 0;
-//     }
-// }
-
-// .loading.login {
-//     opacity: 1;
-//     overflow: hidden;
-//     position: fixed;
-//     z-index: 999;
-//     height: 2em;
-//     width: 2em;
-//     margin: auto;
-//     top: 190px;
-//     left: 0;
-//     bottom: 0;
-//     right: 0;
-// }
-
-// /* Animation */
-
-// @-webkit-keyframes spinner {
-//     0% {
-//         -webkit-transform: rotate(0deg);
-//         -moz-transform: rotate(0deg);
-//         -ms-transform: rotate(0deg);
-//         -o-transform: rotate(0deg);
-//         transform: rotate(0deg);
-//     }
-
-//     100% {
-//         -webkit-transform: rotate(360deg);
-//         -moz-transform: rotate(360deg);
-//         -ms-transform: rotate(360deg);
-//         -o-transform: rotate(360deg);
-//         transform: rotate(360deg);
-//     }
-// }
-
-// @-moz-keyframes spinner {
-//     0% {
-//         -webkit-transform: rotate(0deg);
-//         -moz-transform: rotate(0deg);
-//         -ms-transform: rotate(0deg);
-//         -o-transform: rotate(0deg);
-//         transform: rotate(0deg);
-//     }
-
-//     100% {
-//         -webkit-transform: rotate(360deg);
-//         -moz-transform: rotate(360deg);
-//         -ms-transform: rotate(360deg);
-//         -o-transform: rotate(360deg);
-//         transform: rotate(360deg);
-//     }
-// }
-
-// @-o-keyframes spinner {
-//     0% {
-//         -webkit-transform: rotate(0deg);
-//         -moz-transform: rotate(0deg);
-//         -ms-transform: rotate(0deg);
-//         -o-transform: rotate(0deg);
-//         transform: rotate(0deg);
-//     }
-
-//     100% {
-//         -webkit-transform: rotate(360deg);
-//         -moz-transform: rotate(360deg);
-//         -ms-transform: rotate(360deg);
-//         -o-transform: rotate(360deg);
-//         transform: rotate(360deg);
-//     }
-// }
-
-// @keyframes spinner {
-//     0% {
-//         -webkit-transform: rotate(0deg);
-//         -moz-transform: rotate(0deg);
-//         -ms-transform: rotate(0deg);
-//         -o-transform: rotate(0deg);
-//         transform: rotate(0deg);
-//     }
-
-//     100% {
-//         -webkit-transform: rotate(360deg);
-//         -moz-transform: rotate(360deg);
-//         -ms-transform: rotate(360deg);
-//         -o-transform: rotate(360deg);
-//         transform: rotate(360deg);
-//     }
-// }
+    .wrapper {
+        position: absolute;
+        left: 25%;
+        transition: transform .5s ease, height .2s ease;
+        bottom: -240px;
+    }
+}
