--- a/React WEB/src/components/SCSS/User_img.module.css
+++ b/React WEB/src/components/SCSS/User_img.module.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+.container {
+  padding-left: 50%;
+}
+
 .action_user {
   display: flex;
   flex-direction: column;
@@ -124,4 +128,15 @@
 .sinal2.active {
   visibility: visible;
   opacity: 1;
+}
+
+@media screen and (max-width: 645px) {
+  .container {
+    padding-left: 250px;
+  }
+}
+@media screen and (min-width: 646px) {
+  .container {
+    padding-left: 570px;
+  }
 }/*# sourceMappingURL=User_img.module.css.map */
